src/test/borrowck/borrowck_borrow_stack_variables.stderr
error[E0499]: cannot borrow `x` as mutable more than once at a time
  --> $DIR/borrowck_borrow_stack_variables.sq:8:24
   |
LL |     let a: &mut i32 = &mut x;
   |                       ------ first mutable borrow occurs here
LL |     let _b: &mut i32 = &mut x;
   |                        ^^^^^^ second mutable borrow occurs here
LL |     *a;
   |     -- first borrow later used here

error[E0502]: cannot borrow `x` as immutable because it is also borrowed as mutable
  --> src/test/borrowck/borrowck_borrow_stack_variables.sq:16:20
   |
LL |     let a: &mut i32 = &mut x;
   |                       ------ mutable borrow occurs here
LL |     let _b: &i32 = &x;
   |                    ^^ immutable borrow occurs here
LL |     *a;
   |     -- mutable borrow later used here

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> src/test/borrowck/borrowck_borrow_stack_variables.sq:24:24
   |
LL |     let a: &i32 = &x;
   |                   -- immutable borrow occurs here
LL |     let _b: &mut i32 = &mut x;
   |                        ^^^^^^ mutable borrow occurs here
LL |     *a;
   |     -- immutable borrow later used here